# tsquad

./: LICENSE  README.md  example_shanks.py  pyproject.toml
tests/: test_basics.py  test_quad.py  test_quad_complex.py  test_shanks.py
tsquad/: __init__.py  generate_c_nodes_weights_header.py  generate_py_nodes_weights.py  shanks.py  tanhsinh_py.py  ts_parameters.py  tsconfig.py  tsquad_py.py
