[tool.poetry]
name = "tsquad"
version = "0.2.3"
description = "numeric quadrature using the Tanh-Sinh variable transformation"
authors = ["Richard Hartmann <richard.hartmann@tu-dresden.de>"]

[tool.poetry.dependencies]
python = "^3.9"
mpmath = "^1.2.1"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.1"
pytest = "^7.0.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
